--- a/app/src/main/res/layout/activity_next_level2.xml
+++ b/app/src/main/res/layout/activity_next_level2.xml
@@ -1,13 +1,10 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="16dp"
-    android:weightSum="2"
-    tools:context=".testGame">
+    tools:context=".NextLevel2">
 
     <LinearLayout
         android:layout_width="match_parent"
