--- a/app/src/main/res/layout/activity_test_game.xml
+++ b/app/src/main/res/layout/activity_test_game.xml
@@ -1,92 +1,153 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="16dp"
-    android:weightSum="2"
+    android:orientation="vertical"
     tools:context=".testGame">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/customdrop"
+        android:padding="5dp"
+        android:outlineAmbientShadowColor="@color/pred"
+        android:outlineSpotShadowColor="@color/pred"
+        android:elevation="12dp"
+        android:src="@drawable/mainlogom01"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription,HardcodedText" />
+
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You're At Level 2"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.044" />
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.36">
 
-        <Button
-            android:id="@+id/button1s1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:textSize="18sp"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/buttons2"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:textSize="18sp"/>
+            <Button
+                android:id="@+id/button1s1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:backgroundTint="#EA8888"
+                android:text=""
+                android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/buttons3"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:textSize="18sp"/>
+            <Button
+                android:id="@+id/buttons2"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:backgroundTint="#EA8888"
+                android:text=""
+                android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/buttons4"
+            <Button
+                android:id="@+id/buttons3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:backgroundTint="#EA8888"
+                android:text=""
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/buttons4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="18sp"
+                android:visibility="invisible" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:visibility="invisible"
-            android:textSize="18sp"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button1a1"
+                android:layout_width="match_parent"
+                android:backgroundTint="#EA8888"
+                android:layout_height="80dp"
+                android:text=""
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/buttonsa2"
+                android:layout_width="match_parent"
+                android:backgroundTint="#EA8888"
+                android:layout_height="80dp"
+                android:text=""
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/buttonsa3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:backgroundTint="#EA8888"
+                android:text=""
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/buttonsa4"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text=""
+                android:textSize="18sp"
+                android:visibility="invisible" />
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/scoreText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Score: 0"
+        android:textSize="25sp"
+        android:textColor="@color/pred"
+        android:padding="20sp"
+        android:background="@drawable/customdrop5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-        <Button
-            android:id="@+id/button1a1"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:textSize="18sp"/>
 
-        <Button
-            android:id="@+id/buttonsa2"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:textSize="18sp"/>
-
-        <Button
-            android:id="@+id/buttonsa3"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:textSize="18sp"/>
-
-        <Button
-            android:id="@+id/buttonsa4"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text=""
-            android:visibility="invisible"
-            android:textSize="18sp"/>
-
-        <TextView
-            android:id="@+id/scoreText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Score: 0"
-            android:textSize="18sp"/>
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
