--- a/app/src/main/res/layout/activity_chat_guru.xml
+++ b/app/src/main/res/layout/activity_chat_guru.xml
@@ -7,41 +7,29 @@
     android:background="@color/white"
     tools:context=".chatGuru">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/customdrop"
-        android:padding="5dp"
-        android:outlineAmbientShadowColor="@color/pred"
-        android:outlineSpotShadowColor="@color/pred"
-        android:elevation="12dp"
-        android:src="@drawable/mainlogom01"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="TODO"
-        tools:ignore="ContentDescription,HardcodedText" />
-
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieAnimationView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:lottie_autoPlay="true"
-        app:lottie_repeatCount="5"
-        app:lottie_rawRes="@raw/meditation"
+        android:layout_height="70dp"
         app:layout_constraintBottom_toTopOf="@+id/webviewguru"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:lottie_autoPlay="true"
+        app:lottie_rawRes="@raw/meditation"
+        app:lottie_repeatCount="5" />
 
     <WebView
         android:id="@+id/webviewguru"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
