--- a/app/src/main/res/layout/activity_nwwritingmenu.xml
+++ b/app/src/main/res/layout/activity_nwwritingmenu.xml
@@ -39,6 +39,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:onClick="ghost"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="30dp"
@@ -76,6 +77,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:onClick="ghost"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -151,6 +153,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:onClick="paraf"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
