--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="9dp"
+            android:padding="9dp"
             android:layout_marginRight="25dp"
             android:gravity="center"
             android:text=""
