--- a/app/src/main/res/layout/activity_bookrl1.xml
+++ b/app/src/main/res/layout/activity_bookrl1.xml
@@ -53,6 +53,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="goflip"
                     android:background="@color/white"
                     android:src="@drawable/bookpage" />
 
