--- a/app/src/main/res/layout/activity_chat_guru.xml
+++ b/app/src/main/res/layout/activity_chat_guru.xml
@@ -9,42 +9,40 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/customdrop"
         android:padding="5dp"
         android:src="@drawable/mainlogom01"
-        android:contentDescription="Description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/click2speak" />
 
-<!--    <com.airbnb.lottie.LottieAnimationView-->
-<!--        android:id="@+id/lottieAnimationView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="70dp"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/webviewguru"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.0"-->
-<!--        app:lottie_autoPlay="true"-->
-<!--        app:lottie_rawRes="@raw/meditation"-->
-<!--        app:lottie_repeatCount="5" />-->
-
-    <WebView
-        android:id="@+id/webviewguru"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cd1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="153dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="190dp"
+        app:cardCornerRadius="13dp"
+        app:cardElevation="23dp"
+        android:outlineSpotShadowColor="@color/pred"
+        android:outlineAmbientShadowColor="@color/pred"
+        android:elevation="9dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
+        <WebView
+            android:id="@+id/webflip"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
