--- a/app/src/main/res/layout/activity_logintest.xml
+++ b/app/src/main/res/layout/activity_logintest.xml
@@ -24,7 +24,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="200dp"
+        android:fitsSystemWindows="true"
+        android:layout_marginBottom="9dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -195,6 +196,14 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/loadpic"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/logopg"
+            android:visibility="gone"
+            android:layout_marginBottom="200dp"/>
 
         <ProgressBar
             android:id="@+id/loadingProgressBar"
