--- a/app/src/main/res/layout/activity_wp_flashcard.xml
+++ b/app/src/main/res/layout/activity_wp_flashcard.xml
@@ -13,35 +13,52 @@
         android:background="@drawable/customdrop"
         android:padding="5dp"
         android:src="@drawable/mainlogom01"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         android:contentDescription="@string/click2speak" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cd1"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="190dp"
-        app:cardCornerRadius="13dp"
-        app:cardElevation="23dp"
-        android:outlineSpotShadowColor="@color/pred"
-        android:outlineAmbientShadowColor="@color/pred"
-        android:elevation="9dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        android:fillViewport="true"
+        android:fitsSystemWindows="true"
+        app:layout_constraintTop_toBottomOf="@id/imageView">
 
-        <WebView
-            android:id="@+id/webflip"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </androidx.cardview.widget.CardView>
+            android:layout_height="match_parent">
+
+            <!-- Your other views inside the ScrollView go here -->
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cd1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="27dp"
+                app:cardCornerRadius="23dp"
+                app:cardElevation="23dp"
+                android:outlineSpotShadowColor="@color/pred"
+                android:outlineAmbientShadowColor="@color/pred"
+                android:elevation="9dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <WebView
+                    android:id="@+id/webflip"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+
+            <!-- Add other views inside the ScrollView here -->
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
