--- a/app/src/main/res/layout/activity_nwgrammar.xml
+++ b/app/src/main/res/layout/activity_nwgrammar.xml
@@ -14,35 +14,53 @@
         android:layout_height="wrap_content"
         android:background="@drawable/customdrop"
         android:padding="5dp"
-        android:outlineAmbientShadowColor="@color/pred"
-        android:outlineSpotShadowColor="@color/pred"
-        android:elevation="12dp"
         android:src="@drawable/mainlogom01"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="TODO"
-        tools:ignore="ContentDescription,HardcodedText" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/click2speak" />
 
-    <androidx.cardview.widget.CardView
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="13dp"
-        app:cardElevation="23dp"
-        android:outlineSpotShadowColor="@color/pred"
-        android:outlineAmbientShadowColor="@color/pred"
-        android:elevation="9dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        android:fillViewport="true"
+        android:fitsSystemWindows="true"
+        app:layout_constraintTop_toBottomOf="@id/imageView">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!-- Your other views inside the ScrollView go here -->
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cd1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="27dp"
+                app:cardCornerRadius="23dp"
+                app:cardElevation="23dp"
+                android:outlineSpotShadowColor="@color/pred"
+                android:outlineAmbientShadowColor="@color/pred"
+                android:elevation="9dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
         <WebView
             android:id="@+id/webviewGRA"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-    </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
+            <!-- Add other views inside the ScrollView here -->
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
