--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,8 @@
                     android:layout_height="100dp"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/customdrop3"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:onClick="readmenu1"
                     android:src="@drawable/booklogo"
                     android:contentDescription="Book"
@@ -66,6 +68,8 @@
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/writingnew"
                     android:text="Button"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:onClick="gonwwrite"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -114,6 +118,8 @@
                     android:layout_margin="30dp"
                     android:layout_weight="1"
                     android:onClick="nwlisten"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/listeninglogo"
                     android:contentDescription="Description of the image button"
@@ -133,6 +139,8 @@
                     android:onClick="nwspeak"
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/speaknew"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -183,6 +191,8 @@
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/vocabulary"
                     android:onClick="govoc"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -200,6 +210,8 @@
                     android:onClick="gptgram"
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/grammar"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -248,6 +260,8 @@
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/monk"
                     android:onClick="chatguru"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -265,6 +279,8 @@
                     android:onClick="pronounce"
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/pronounce"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -313,6 +329,8 @@
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/morelogo"
                     android:onClick="gotest"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -330,6 +348,8 @@
                     android:onClick="gotestgame"
                     android:background="@drawable/customdrop3"
                     android:src="@drawable/dicelogo"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     android:contentDescription="Description of the image button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -385,6 +405,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
                     app:lottie_autoPlay="true"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     app:lottie_rawRes="@raw/useranim"
                     app:lottie_repeatCount="5" />
 
@@ -402,6 +424,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.325"
                     app:lottie_autoPlay="true"
+                    android:clickable="true"
+                    android:foreground="@drawable/red_ripple"
                     app:lottie_rawRes="@raw/logger"
                     app:lottie_repeatCount="5" />
             </androidx.constraintlayout.widget.ConstraintLayout>
