--- a/app/src/main/res/layout/activity_menu2.xml
+++ b/app/src/main/res/layout/activity_menu2.xml
@@ -41,6 +41,8 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="7dp"
                 android:onClick="lib1"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="30dp"
@@ -77,6 +79,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="7dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -113,6 +117,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="7dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -149,6 +155,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="7dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
