--- a/app/src/main/res/layout/activity_wp_game.xml
+++ b/app/src/main/res/layout/activity_wp_game.xml
@@ -39,6 +39,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="wpCrossWord"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
@@ -76,6 +78,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="wpFlash"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
@@ -113,6 +117,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="wpMatch"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
@@ -150,6 +156,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="wpQuizs"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
@@ -187,6 +195,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="goTestGame"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
