--- a/app/src/main/res/layout/activity_logintest.xml
+++ b/app/src/main/res/layout/activity_logintest.xml
@@ -105,6 +105,8 @@
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/customdrop3"
                 android:text="Get Code"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/otpname"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -160,6 +162,8 @@
                 android:background="@drawable/customdrop3"
                 android:text="Let's Get Started"
                 android:textColor="@color/white"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
@@ -175,6 +179,7 @@
                 android:layout_marginBottom="5dp"
                 android:onClick="pika"
                 android:text="Pika Overload"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                 app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
