--- a/app/src/main/res/layout/activity_mock_test.xml
+++ b/app/src/main/res/layout/activity_mock_test.xml
@@ -40,6 +40,8 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
                 android:onClick="nwspeak"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="30dp"
@@ -76,6 +78,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -112,6 +116,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
