--- a/app/src/main/res/layout/activity_nwlisetenmenu.xml
+++ b/app/src/main/res/layout/activity_nwlisetenmenu.xml
@@ -40,6 +40,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="listennw1"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
@@ -77,6 +79,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -113,6 +117,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -149,6 +155,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -185,6 +193,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -221,6 +231,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
