--- a/app/src/main/res/layout/activity_nwspeakingmenu.xml
+++ b/app/src/main/res/layout/activity_nwspeakingmenu.xml
@@ -40,6 +40,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="dovoice2"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
@@ -78,6 +80,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="dovoice12"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
@@ -116,6 +120,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:onClick="dovoice13"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
@@ -154,6 +160,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
