--- a/app/src/main/res/layout/activity_nwwritingmenu.xml
+++ b/app/src/main/res/layout/activity_nwwritingmenu.xml
@@ -40,6 +40,8 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
                 android:onClick="ghost"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="30dp"
@@ -78,6 +80,8 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
                 android:onClick="ghost"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -115,6 +119,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
@@ -154,6 +160,8 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
                 android:onClick="paraf"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
