--- a/app/src/main/res/layout/activity_nwwritingmenu.xml
+++ b/app/src/main/res/layout/activity_nwwritingmenu.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                android:onClick="ghost"
+                android:onClick="writingMock"
                 android:clickable="true"
                 android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
@@ -59,6 +59,46 @@
                         android:layout_height="56dp"
                         android:layout_margin="10dp"
                         android:padding="7dp"
+                        android:src="@drawable/radio_1"
+                        android:scaleType="centerInside" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Writing Mock Test"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:gravity="center"
+                        android:padding="8dp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="4dp"
+                android:onClick="ghost"
+                android:clickable="true"
+                android:foreground="@drawable/red_ripple"
+                android:backgroundTint="@color/pred"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:padding="7dp"
+                        android:layout_margin="10dp"
                         android:src="@drawable/radio_1"
                         android:scaleType="centerInside" />
 
