--- a/app/src/main/res/layout/activity_menu2.xml
+++ b/app/src/main/res/layout/activity_menu2.xml
@@ -81,6 +81,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="7dp"
+                android:onClick="booka1"
                 android:clickable="true"
                 android:foreground="@drawable/red_ripple"
                 android:backgroundTint="@color/pred"
@@ -106,7 +107,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Level A1"
+                        android:text="Level A1- Books"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:gravity="center"
